@@ -15,6 +15,7 @@
   <signal name="delete_event" handler="on_dbgcode_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:07:55 GMT"/>
   <signal name="hide" handler="on_dbgcode_window_hide" last_modification_time="Wed, 30 Jun 2004 13:11:02 GMT"/>
   <signal name="show" handler="on_dbgcode_window_show" last_modification_time="Sun, 04 Jul 2004 08:59:58 GMT"/>
+  <signal name="frame_event" handler="on_dbgcode_window_frame_event" last_modification_time="Sat, 31 Jul 2004 16:29:07 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox1">
