@@ -512,3 +512,23 @@ int  hid_screenshot(char *filename)
 
 	return 0;
 }
+
+
+GLADE_CB gboolean
+on_calc_wnd_window_state_event         (GtkWidget       *widget,
+                                        GdkEvent        *event,
+                                        gpointer         user_data)
+{
+    GdkEventWindowState *wstate = (GdkEventWindowState *)event;
+    GdkWindowState state = wstate->new_window_state;
+    GdkWindowState mask = wstate->changed_mask;
+
+    printf("%04X %04X\n", wstate->new_window_state, wstate->changed_mask);
+
+    if((mask & GDK_WINDOW_STATE_ICONIFIED) && (state & GDK_WINDOW_STATE_ICONIFIED))
+        gtk_debugger_minimize_all();
+    else if((mask & GDK_WINDOW_STATE_ICONIFIED) && !(state & GDK_WINDOW_STATE_ICONIFIED))
+        gtk_debugger_deminimize_all();
+
+    return FALSE;
+}
