@@ -34,4 +34,7 @@ void gtk_debugger_refresh(void);
 
 void set_other_windows_sensitivity(int state);
 
+void gtk_debugger_minimize_all(void);
+void gtk_debugger_deminimize_all(void);
+
 #endif
